[tool.poetry]
name = "openpack-toolkit"
version = "1.0.1"
description = "Toolkit for OpenPack Dataset"
authors = ["Yoshimura Naoya"]
homepage = "https://open-pack.github.io"
repository = "https://github.com/open-pack/open-pack-toolkit"
readme = "README.md" 
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.5.2"
omegaconf = "^2.2.2"
scipy = "^1.7.3"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.4"
pytest-cov = "^3.0.0"
pdoc3 = "^0.10.0"
Jinja2 = "^3.1.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39"]

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true
